--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -40,14 +40,12 @@
     "- [benchmarking.py](./benchmarking.py) - Performance testing\n",
     "- [sweeping_algorithm.py](./sweeping_algorithm.py) - Sweeping algorithm (1st approach)  \n",
     "- [output_sensitive_algorithm.py](./output_sensitive_algorithm.py) - Output-sensitive algorithm (2nd approach)  \n",
-    "- [windmill_algorithm](./windmill_algorithm.py) - Windmill algorithm (3rd approach)  \n",
-    "\n",
-    "You can still run all cells as before - the code is just imported from these files instead of being defined inline."
+    "- [windmill_algorithm.py](./windmill_algorithm.py) - Windmill algorithm (3rd approach)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cede581a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +250,7 @@
     "\n",
     "Converting the coordinates from polar to cartesian is straightforward: $x = R \\cos \\Theta$ and $y = R \\sin \\Theta$.  \n",
     "\n",
-    "This approach leads to the following redundancy-free code."
+    "This approach leads to a redundancy-free code."
    ]
   },
   {
@@ -676,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3748670e",
    "metadata": {
     "colab": {
@@ -699,19 +697,7 @@
     "id": "3748670e",
     "outputId": "9ff3be95-1e98-49b8-bd47-0bce4cd4df05"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'get_benchmarks' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m dataset_sizes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1_000\u001b[39m, \u001b[38;5;241m100_001\u001b[39m, \u001b[38;5;241m1_000\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m ratios, times \u001b[38;5;241m=\u001b[39m \u001b[43mget_benchmarks\u001b[49m(dataset_sizes, compute_convex_hull_1, [dataset_B])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'get_benchmarks' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_sizes = range(1_000, 100_001, 1_000)\n",
     "ratios, times = get_benchmarks(dataset_sizes, compute_convex_hull_1, [dataset_B])"
@@ -1269,11 +1255,11 @@
     "id": "1893db58"
    },
    "source": [
-    "To construct the convex hull, we begin by identifying the leftmost point in the set: this process requires a single linear scan of $O(n)$ time. This point is guaranteed to be a vertex of the hull. We then initialize the windmill by drawing a vertical line through this pivot and begin rotating it counterclockwise. As the line sweeps through the plane, the first point it encounters becomes the next vertex of the hull. This new point then acts as the pivot for the subsequent rotation. By repeating this process, the line \"wraps\" around the point cloud, effectively tracing the perimeter.  \n",
+    "To construct the convex hull, we begin by identifying the leftmost point in the set: this process requires a single linear scan of $O(n)$ time. This point is guaranteed to be a vertex of the hull. We then initialize the windmill by drawing a vertical line through this pivot and begin rotating it counterclockwise. As the line sweeps through the plane, the first point it encounters becomes the next vertex of the hull. If three points happen to be collinear (which occurs with probability 0 using our dataset generation functions), we keep the farthest one from the pivot. This new point then acts as the pivot for the subsequent rotation. By repeating this process, the line \"wraps\" around the point cloud, effectively tracing the perimeter.  \n",
     "\n",
     "We specifically chose a counterclockwise rotation to ensure that the resulting sequence of vertices matches the required output order. The process concludes once the rotating line returns to the original leftmost point, completing the boundary.  \n",
     "\n",
-    "The core of the loop logic relies on identifying that \"first point encountered\" without actually simulating every degree of a rotation. For each new pivot, the algorithm performs a nested pass through all $n$ points to find the best candidate for the next vertex. It treats the current candidate as a tentative boundary and compares it against every other point $p$ using the `is_clockwise` orientation test. If the algorithm finds a point $p$ that makes a clockwise turn relative to the current pivot-candidate segment, it means $p$ is \"more to the right\" and would be hit by the rotating line first. The algorithm then updates the candidate to $p$ and continues the search. This ensures that when the inner loop finishes, the chosen point is the most extreme outlier, keeping all other points in the set strictly to the left of the new hull edge."
+    "The core of the loop logic relies on identifying that \"first point encountered\" without actually simulating every degree of a rotation. For each new pivot, the algorithm performs a nested pass through all $n$ points to find the best candidate for the next vertex. It treats the current candidate as a tentative boundary and compares it against every other point $p$ using the [`is_clockwise`](./geometry.py) orientation test. If the algorithm finds a point $p$ that makes a clockwise turn relative to the current pivot-candidate segment, it means $p$ is \"more to the right\" and would be hit by the rotating line first. The algorithm then updates the candidate to $p$ and continues the search. This ensures that when the inner loop finishes, the chosen point is the most extreme outlier, keeping all other points in the set strictly to the left of the new hull edge."
    ]
   },
   {
@@ -1370,7 +1356,7 @@
    "outputs": [],
    "source": [
     "dataset_sizes = range(1_000, 100_001, 1_000)\n",
-    "ratios, times = get_benchmarks(dataset_sizes, compute_convex_hull_3, [dataset_A, dataset_B, dataset_C])"
+    "ratios, times = get_benchmarks(dataset_sizes, compute_convex_hull_3, [dataset_A, dataset_B, dataset_C, dataset_D])"
    ]
   },
   {
